Almost finished last Section

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
           <div class="project-container">
             <!-- Image -->
             <div class="project-img">
-              <a href="project1.html"
+              <a href="project3.html"
                 ><img
                   class="project-picture"
-                  src="imgs/project1.png"
+                  src="imgs/project3.png"
                   alt="First Project Picture"
               /></a>
             </div>
@@ -197,11 +197,11 @@
             <div class="project-text">
               <p class="project-year">2022</p>
               <div class="project-content">
-                <a class="project-title" href="project1.html"
-                  >Casetify Home Page Redesign</a
-                >
-                <p class="project-desc">Lorem ipsum seit mein dupe</p>
-                <a class="view-project" href="project1.html">View Project</a>
+                <a class="project-title" href="project3.html">Bisc-Fit</a>
+                <p class="project-desc">
+                  More of my designs throughout the years
+                </p>
+                <a class="view-project" href="project3.html">View Project</a>
               </div>
             </div>
           </div>
