--- a/project3.html
+++ b/project3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify Redesign</title>
-    <link rel="stylesheet" href="css/project2.css" />
+    <title>Bisc-Fit Design</title>
+    <link rel="stylesheet" href="css/project3.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
 
@@ -38,7 +38,7 @@
         <div class="project-background">
           <img
             class="project-background-img"
-            src="imgs/project2-background.png"
+            src="imgs/project3-background.png"
             alt="Project Background"
           />
         </div>
@@ -52,12 +52,12 @@
             <!-- Type of Product -->
             <div class="info-container">
               <p class="info-title">TYPE OF PROJECT</p>
-              <p class="info-content">Redesign</p>
+              <p class="info-content">Design</p>
             </div>
             <!-- Software Used -->
             <div class="info-container">
               <p class="info-title">SOFTWARE USED</p>
-              <p class="info-content">Figma</p>
+              <p class="info-content">Figma, Photoshop</p>
             </div>
           </div>
           <!-- Col 2 -->
@@ -65,7 +65,7 @@
             <!-- Category -->
             <div class="info-container">
               <p class="info-title">CATEGORY</p>
-              <p class="info-content">Desktop App</p>
+              <p class="info-content">Packaging</p>
             </div>
 
             <!-- Date -->
@@ -79,23 +79,15 @@
         <div class="project-text">
           <!-- Problem -->
           <div class="project-text-section">
-            <div class="section-title">Problem</div>
+            <div class="section-title">Brief</div>
             <div class="section-text">
-              <p style="padding-bottom: 0">
-                During a conversation with my friends, I gathered valuable
-                insights regarding their experience with the desktop app version
-                of Spotify. The feedback I received was consistent in
-                highlighting the challenges associated with navigating through
-                the interface, which was perceived as being cluttered with too
-                many elements.
-              </p>
               <p>
-                In particular, users expressed frustration with the time it took
-                to complete tasks on the app, which impacted their overall
-                experience. This feedback was crucial in informing my redesign
-                process, as I focused on streamlining the interface and
-                simplifying the user journey to make it more intuitive and
-                efficient.
+                As part of a university project for my minor degree in
+                marketing, I designed three packagings for cookies called
+                Bisc-Fit. The packagings come in three flavors: chocolate,
+                hazelnut, and strawberry. The task was to create a company name,
+                packaging, and a business strategy for selling the cookies. My
+                responsibility was to design the packaging for Bisc-Fit cookies.
               </p>
             </div>
           </div>
@@ -104,8 +96,12 @@
             <div class="section-title">Goals</div>
             <div class="section-text">
               <p>
-                Improve home screen infrastructure to simplify user flows and
-                make key fuctions more accessible.
+                The primary goal of designing the packaging for Bisc-Fit cookies
+                was to create an attractive and eye-catching design that would
+                make the product stand out on the shelves. The packaging needed
+                to be visually appealing to the target audience, which was
+                health-conscious individuals who are looking for a snack that is
+                both delicious and nutritious.
               </p>
             </div>
           </div>
@@ -114,59 +110,29 @@
             <div class="section-title">Research</div>
             <div class="section-text">
               <p style="padding-bottom: 0">
-                As part of my redesign of Spotify's homescreen, I conducted a
-                user research study with a sample of approximately 6
-                individuals, consisting of friends and family members. To ensure
-                that my research findings were inclusive and representative, I
-                deliberately targeted a few individuals aged 40 and above, who
-                tend to have more difficulty navigating through digital
-                interfaces.
-              </p>
-              <p style="padding-bottom: 0">
-                Through a combination of one-on-one interviews and surveys, I
-                gathered feedback from participants on their likes and dislikes
-                of the current interface. This feedback was then compiled and
-                analyzed to identify the key issues that were causing
-                frustration and confusion for users.
+                To create an effective packaging design, I conducted extensive
+                research into the target audience, the competition, and current
+                packaging trends. I studied the packaging designs of similar
+                products and noted the color schemes, fonts, and visual elements
+                that were commonly used. I also looked into the latest packaging
+                trends and identified elements that would make the Bisc-Fit
+                packaging modern and appealing to the target audience.
               </p>
               <p>
-                To further inform my redesign, I conducted a thorough analysis
-                of the user interfaces of Spotify's main competitors. This
-                enabled me to identify best practices and innovative solutions
-                that could be adapted to improve the user experience of
-                Spotify's homescreen. Based on my research findings and
-                analysis, I developed a series of wireframes and prototypes,
-                which I tested with a small group of participants to gain
-                feedback and refine my designs. The final result is a visually
-                appealing and user-friendly homescreen that addresses the key
-                pain points identified in the research.
+                I also researched the health benefits of the ingredients used in
+                Bisc-Fit cookies. This information helped me to create a
+                packaging design that highlights the nutritional value of the
+                product and its benefits for the consumer. By combining research
+                on the target audience and the product, I was able to design a
+                packaging that is not only visually appealing but also
+                communicates that the cookies are the healthier option in the
+                store.
               </p>
             </div>
-          </div>
-          <!-- Ideation -->
-          <div class="project-text-section">
-            <div class="section-title">Ideation</div>
-            <div class="section-text">
-              <p>
-                The ideation process involved generating and exploring a variety
-                of potential solutions to address the pain points identified
-                during the research phase. This was done through a collaborative
-                and iterative process that involved brainstorming, sketching
-                wireframes, and testing prototypes with users. The resulting
-                designs effectively addressed the key pain points identified
-                during the research phase. Ultimately, I decided that this one
-                was the best of all of them.
-              </p>
-            </div>
-            <img
-              class="ideation full"
-              src="imgs/Ideation.png"
-              alt="Project Ideation"
-            />
           </div>
         </div>
       </section>
-      <!-- Before and After Section -->
+      <!-- Final Results Section -->
       <section id="third-section">
         <!-- Before -->
         <div class="image-section">
