Added Last line

--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
       </section>
       <!-- My Projects -->
       <div class="project-text-container">
-        <p class="projects-text">MY PROJECTS</p>
+        <div class="empty"></div>
+        <div class="projects-text">MY PROJECTS</div>
+        <!-- Separation Line -->
+        <div class="projects-line hidden-right">
+          <div class="my-projects-line"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+        </div>
       </div>
       <!-- Second Section -->
       <section class="project-section second-section">
