--- a/project3.html
+++ b/project3.html
@@ -130,26 +130,33 @@
               </p>
             </div>
           </div>
+          <!-- Final Results -->
+          <div class="project-text-section">
+            <div class="section-title">Final Results</div>
+          </div>
         </div>
       </section>
       <!-- Final Results Section -->
       <section id="third-section">
-        <!-- Before -->
-        <div class="image-section">
-          <div class="section-title centered">Before</div>
+        <div class="image-container">
           <img
-            class="before-after full"
-            src="imgs/before-project2.png"
-            alt="Preview of Before"
+            class="result-img"
+            src="imgs/project3-result1.png"
+            alt="Final Result One"
           />
         </div>
-        <!-- After -->
-        <div class="image-section">
-          <div class="section-title centered">After</div>
+        <div class="image-container">
           <img
-            class="before-after full"
-            src="imgs/after-project2.png"
-            alt="Preview of After"
+            class="result-img"
+            src="imgs/project3-result2.png"
+            alt="Final Result One"
+          />
+        </div>
+        <div class="image-container">
+          <img
+            class="result-img"
+            src="imgs/project3-result3.png"
+            alt="Final Result One"
           />
         </div>
       </section>
