--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <script defer src="js/hidden.js"></script>
+    <link rel="icon" href="imgs/favicon.ico" />
   </head>
   <body>
     <img class="hero-background" src="imgs/background.png" alt="" />
