--- a/project1.html
+++ b/project1.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="imgs/favicon.ico" />
   </head>
   <body>
     <!-- Header -->
@@ -137,6 +138,13 @@
         <div class="preview-container centered">
           <div class="preview centered">
             <img class="preview-screen" src="imgs/laptop.png" alt="Laptop" />
+          </div>
+          <div class="scroll-container">
+            <img
+              class="scroll-icon"
+              src="imgs/scroll-icon.png"
+              alt="Scroll Icon"
+            />
           </div>
           <div class="preview-content">
             <img class="full" src="imgs/preview1.png" alt="Preview of Site" />
