--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="imgs/favicon.ico" />
   </head>
   <body>
     <!-- Header -->
