Finished Site (Hopefully)

--- a/project1.html
+++ b/project1.html
@@ -28,7 +28,9 @@
       <div class="right-section">
         <ul class="list">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="">Resume</a></li>
+          <li>
+            <a href="resume/GalinaGaneva_CV.pdf" target="_blank">Resume</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -140,11 +142,7 @@
             <img class="preview-screen" src="imgs/laptop.png" alt="Laptop" />
           </div>
           <div class="scroll-container">
-            <img
-              class="scroll-icon"
-              src="imgs/scroll-icon.png"
-              alt="Scroll Icon"
-            />
+            <img src="imgs/scroll-icon.png" alt="Scroll Icon" />
           </div>
           <div class="preview-content">
             <img class="full" src="imgs/preview1.png" alt="Preview of Site" />
