--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
       <div class="right-section">
         <ul class="list">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="">Resume</a></li>
+          <li>
+            <a href="resume/GalinaGaneva_CV.pdf" target="_blank">Resume</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -36,32 +38,54 @@
     <!-- Main Content -->
     <main id="main-content">
       <div class="text-section">
-        <h2 class="about-name">Galina Ganeva</h2>
-        <h4 class="about-me">About Me</h4>
+        <p class="about-name">Hey, I’m Galina!</p>
         <!-- About Info -->
         <div class="about-info">
           <!-- About Text -->
-          <div style="max-width: 45em">
-            <p style="margin-top: 0.6em">
-              As a UI/UX Designer, I bring a unique set of skills to the table.
-              I am not afraid to speak and present to large groups of people and
-              have a good understanding of different ethnicities and cultures,
-              which helps me work well in a team and make friends easily. My
-              internet knowledge allows me to communicate freely and stay
-              up-to-date with the latest design trends and technologies.
+          <div class="text-container">
+            <p>
+              <img
+                class="text-icon"
+                src="imgs/smiley-heart-icon.svg"
+                alt="Smiley Heart Icon"
+              />
+              I'm an aspiring designer studying Web Design at New Bulgarian
+              University. I'm from Burgas, however, I moved to Sofia to pursue
+              my bachelor's degree.
             </p>
             <p>
-              One of my best skills is thoroughly analyzing problems, which
-              allows me to solve them quickly and efficiently without getting
-              tired easily. I am a person who can work under pressure, and I
-              confidently call myself responsible and efficient in what I do. I
-              am passionate about clear design and have a keen eye for detail,
-              which enables me to create high-quality design solutions through
-              wireframes, visual designs, and interactive prototypes. I am
-              proficient in Adobe Creative Suite and have experience using
-              multiple prototyping tools. I also have knowledge of mobile and
-              responsive web design and can optimize existing user interface
-              designs.
+              <img
+                class="text-icon test"
+                src="imgs/suitcase-icon.svg"
+                alt="Suitcase Icon"
+              />
+              My work experience as a customer support representative has made
+              me a person who can work under pressure. I confidently call myself
+              responsible and efficient in what I do. One of my best skills is
+              thoroughly analyzing problems, which allows me to solve them
+              quickly and efficiently without getting tired easily.
+            </p>
+            <p>
+              <img
+                class="text-icon test"
+                src="imgs/design-icon.svg"
+                alt="Design Icon"
+              />
+              Through my work experience as a freelance designer, I have learned
+              that I am passionate about clear design and have a keen eye for
+              detail. This enables me to create high-quality design solutions
+              through wireframes, visual designs, and interactive prototypes.
+            </p>
+            <p>
+              <img
+                class="text-icon"
+                src="imgs/palmtree-icon.svg"
+                alt="Palmtree Icon"
+              />
+              When I'm not studying or designing, I enjoy spending time with my
+              friends and family. I am an outgoing and friendly person, and I
+              love meeting new people and learning about their unique
+              experiences.
             </p>
           </div>
           <!-- Character Icon -->
