--- a/project3.html
+++ b/project3.html
@@ -28,7 +28,9 @@
       <div class="right-section">
         <ul class="list">
           <li><a href="about.html">About Me</a></li>
-          <li><a href="">Resume</a></li>
+          <li>
+            <a href="resume/GalinaGaneva_CV.pdf" target="_blank">Resume</a>
+          </li>
         </ul>
       </div>
     </header>
