changed resume and added final changes

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                 <a class="project-title" href="project1.html"
                   >Casetify Home Page Redesign</a
                 >
-                <p class="project-desc">Lorem ipsum seit mein dupe</p>
+                <p class="project-desc">
+                  Fresh and modern redesign of the Casetify Home Page
+                </p>
                 <a class="view-project" href="project1.html">View Project</a>
               </div>
             </div>
@@ -209,9 +211,7 @@
               <p class="project-year">2023</p>
               <div class="project-content">
                 <a class="project-title" href="project3.html">Bisc-Fit</a>
-                <p class="project-desc">
-                  More of my designs throughout the years
-                </p>
+                <p class="project-desc">Healthy and tasty cookie brand</p>
                 <a class="view-project" href="project3.html">View Project</a>
               </div>
             </div>
