Added 4th project

--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
           </div>
         </div>
         <!-- Arrows -->
-        <div class="arrow-container hidden-right">
+        <a href="#second-section" class="arrow-container hidden-right">
           <i class="arrow-down"></i>
           <i class="arrow-down"></i>
-        </div>
+        </a>
       </section>
       <!-- My Projects -->
       <div class="project-text-container">
         <div class="empty"></div>
         <div class="projects-text">MY PROJECTS</div>
         <!-- Separation Line -->
-        <div class="projects-line hidden-right">
+        <div class="projects-line">
           <div class="my-projects-line"></div>
           <div class="square"></div>
           <div class="square"></div>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <!-- Second Section -->
-      <section class="project-section second-section">
+      <section id="second-section" class="project-section second-section">
         <!-- Project Container -->
         <div class="item-section hidden-right">
           <div class="project-container">
@@ -105,7 +105,7 @@
           </div>
         </div>
         <!-- Project Number Line -->
-        <div class="project-number-container hidden-right">
+        <div class="project-number-container">
           <div class="project-square"></div>
           <div class="project-square"></div>
           <div class="project-square"></div>
@@ -122,7 +122,7 @@
         </div>
       </section>
       <!-- Separation Line -->
-      <div class="separation-line hidden-right">
+      <div class="separation-line">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
@@ -134,7 +134,7 @@
         <div class="square"></div>
       </div>
       <!-- Third Section -->
-      <section class="project-section third-section">
+      <section id="third-section" class="project-section third-section">
         <!-- Project Container -->
         <div class="item-section hidden-left">
           <div class="project-container">
@@ -164,7 +164,7 @@
           </div>
         </div>
         <!-- Project Number Line -->
-        <div class="project-number-container hidden-left">
+        <div class="project-number-container">
           <div class="project-square"></div>
           <div class="project-square"></div>
           <div class="project-square"></div>
@@ -181,7 +181,7 @@
         </div>
       </section>
       <!-- Separation Line -->
-      <div class="separation-line hidden-left">
+      <div class="separation-line">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
@@ -218,7 +218,7 @@
           </div>
         </div>
         <!-- Project Number Line -->
-        <div class="project-number-container hidden-right">
+        <div class="project-number-container">
           <div class="project-square"></div>
           <div class="project-square"></div>
           <div class="project-square"></div>
