--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <i class="arrow-down"></i>
         </a>
       </section>
+
       <!-- My Projects -->
       <div class="project-text-container">
         <div class="empty"></div>
@@ -75,31 +76,34 @@
           <div class="square"></div>
         </div>
       </div>
-      <!-- Second Section -->
+
+      <!-- Second Section Wasteless -->
       <section id="second-section" class="project-section second-section">
         <!-- Project Container -->
         <div class="item-section hidden-right">
           <div class="project-container">
             <!-- Image -->
             <div class="project-img">
-              <a href="project1.html"
+              <a href="project-wasteless.html"
                 ><img
                   class="project-picture"
-                  src="imgs/project1.png"
+                  src="imgs/project4.png"
                   alt="First Project Picture"
               /></a>
             </div>
             <!-- Text -->
             <div class="project-text">
-              <p class="project-year">2022</p>
+              <p class="project-year">2023</p>
               <div class="project-content">
-                <a class="project-title" href="project1.html"
-                  >Casetify Home Page Redesign</a
+                <a class="project-title" href="project-wasteless.html"
+                  >Wasteless App</a
                 >
                 <p class="project-desc">
-                  Fresh and modern redesign of the Casetify Home Page
+                  App that tracks expiration dates of food in your home
                 </p>
-                <a class="view-project" href="project1.html">View Project</a>
+                <a class="view-project" href="project-wasteless.html"
+                  >View Project</a
+                >
               </div>
             </div>
           </div>
@@ -121,6 +125,7 @@
           <div class="project-square"></div>
         </div>
       </section>
+
       <!-- Separation Line -->
       <div class="separation-line">
         <div class="square"></div>
@@ -133,32 +138,34 @@
         <div class="square"></div>
         <div class="square"></div>
       </div>
-      <!-- Third Section -->
+
+      <!-- Third Section Casetify -->
       <section id="third-section" class="project-section third-section">
         <!-- Project Container -->
-        <div class="item-section hidden-left">
+        <div class="item-section hidden-right">
           <div class="project-container">
             <!-- Image -->
             <div class="project-img">
-              <a href="project2.html"
+              <a href="project-casetify.html"
                 ><img
                   class="project-picture"
-                  src="imgs/project2.png"
-                  alt="Second Project Picture"
+                  src="imgs/project1.png"
+                  alt="First Project Picture"
               /></a>
             </div>
             <!-- Text -->
             <div class="project-text">
-              <p class="project-year">2023</p>
+              <p class="project-year">2022</p>
               <div class="project-content">
-                <a href="project2.html" class="project-title"
-                  >Spotify Home Screen Redesign</a
+                <a class="project-title" href="project-casetify.html"
+                  >Casetify Home Page Redesign</a
                 >
                 <p class="project-desc">
-                  A version of the current Spotify home screen that simpifies
-                  the user flow
+                  Fresh and modern redesign of the Casetify Home Page
                 </p>
-                <a class="view-project" href="project2.html">View Project</a>
+                <a class="view-project" href="project-casetify.html"
+                  >View Project</a
+                >
               </div>
             </div>
           </div>
@@ -180,6 +187,7 @@
           <div class="project-square"></div>
         </div>
       </section>
+
       <!-- Separation Line -->
       <div class="separation-line">
         <div class="square"></div>
@@ -192,27 +200,35 @@
         <div class="square"></div>
         <div class="square"></div>
       </div>
-      <!-- Fourth Section -->
-      <section class="project-section fourth-section">
+
+      <!-- Fourth Section Spotify -->
+      <section id="fourth-section" class="project-section fourth-section">
         <!-- Project Container -->
-        <div class="item-section hidden-right">
+        <div class="item-section hidden-left">
           <div class="project-container">
             <!-- Image -->
             <div class="project-img">
-              <a href="project3.html"
+              <a href="project-spotify.html"
                 ><img
                   class="project-picture"
-                  src="imgs/project3.png"
-                  alt="First Project Picture"
+                  src="imgs/project2.png"
+                  alt="Second Project Picture"
               /></a>
             </div>
             <!-- Text -->
             <div class="project-text">
               <p class="project-year">2023</p>
               <div class="project-content">
-                <a class="project-title" href="project3.html">Bisc-Fit</a>
-                <p class="project-desc">Healthy and tasty cookie brand</p>
-                <a class="view-project" href="project3.html">View Project</a>
+                <a href="project-spotify.html" class="project-title"
+                  >Spotify Home Screen Redesign</a
+                >
+                <p class="project-desc">
+                  A version of the current Spotify home screen that simpifies
+                  the user flow
+                </p>
+                <a class="view-project" href="project-spotify.html"
+                  >View Project</a
+                >
               </div>
             </div>
           </div>
@@ -226,6 +242,66 @@
           <div class="project-square"></div>
           <div class="project-line"></div>
           <div class="project-number">03</div>
+          <div class="project-line"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+        </div>
+      </section>
+
+      <!-- Separation Line -->
+      <div class="separation-line">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="line"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+      </div>
+
+      <!-- Fifth Section Bisc-Fit -->
+      <section class="project-section third-section">
+        <!-- Project Container -->
+        <div class="item-section hidden-right">
+          <div class="project-container">
+            <!-- Image -->
+            <div class="project-img">
+              <a href="project-biscfit.html"
+                ><img
+                  class="project-picture"
+                  src="imgs/project3.png"
+                  alt="First Project Picture"
+              /></a>
+            </div>
+            <!-- Text -->
+            <div class="project-text">
+              <p class="project-year">2023</p>
+              <div class="project-content">
+                <a class="project-title" href="project-biscfit.html"
+                  >Bisc-Fit</a
+                >
+                <p class="project-desc">Healthy and tasty cookie brand</p>
+                <a class="view-project" href="project-biscfit.html"
+                  >View Project</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Project Number Line -->
+        <div class="project-number-container">
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-square"></div>
+          <div class="project-line"></div>
+          <div class="project-number">04</div>
           <div class="project-line"></div>
           <div class="project-square"></div>
           <div class="project-square"></div>
