Adjusted text for final project

--- a/project-wasteless.html
+++ b/project-wasteless.html
@@ -343,14 +343,15 @@
             <!-- Text Section -->
             <div class="section-text">
               <p>
-                The ideation process involved generating and exploring a variety
-                of potential solutions to address the pain points identified
-                during the research phase. This was done through a collaborative
-                and iterative process that involved brainstorming, sketching
-                wireframes, and testing prototypes with users. The resulting
-                designs effectively addressed the key pain points identified
-                during the research phase. Ultimately, I decided that this one
-                was the best of all of them.
+                During my user testing phase, I conducted a study among
+                individuals aged between 11 and 45 to evaluate the usability of
+                my app. The results showed that the design was easy to use and
+                navigate. However, during the testing process, one participant
+                suggested that the colour of the message that indicates product
+                expiration should be a darker and warmer yellow to improve
+                visibility. I took this feedback into consideration and made the
+                necessary changes to the design, resulting in a more
+                user-friendly app.
               </p>
             </div>
           </div>
@@ -361,14 +362,15 @@
             <!-- Text Section -->
             <div class="section-text">
               <p>
-                The ideation process involved generating and exploring a variety
-                of potential solutions to address the pain points identified
-                during the research phase. This was done through a collaborative
-                and iterative process that involved brainstorming, sketching
-                wireframes, and testing prototypes with users. The resulting
-                designs effectively addressed the key pain points identified
-                during the research phase. Ultimately, I decided that this one
-                was the best of all of them.
+                Designing and conducting user testing for the first time was an
+                incredibly valuable experience for me. I was initially nervous
+                about how well the design would be received by users, but I
+                gained a lot from the experience. Not only did I learn more
+                about the design process, but I also gained a deeper
+                understanding of how users interact with digital products.
+                Overall, I enjoyed the experience of creating the design and
+                conducting user testing, and I am looking forward to applying
+                what I learned in future projects.
               </p>
             </div>
           </div>
