Added header adjusment in js and adjusted project4

--- a/project-wasteless.html
+++ b/project-wasteless.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/project4.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <script defer src="js/header-adjustment.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,6 +47,22 @@
           />
         </div>
       </section>
+      <!-- Sticky Navbar -->
+      <nav id="navbar">
+        <a href="#section-problem">Problem</a>
+        <a href="#section-goals">Goals</a>
+        <a href="#section-solutions">Solutions</a>
+        <a href="#section-research">Research</a>
+        <a href="#section-interviews">Interviews</a>
+        <a href="#section-insights">Insights</a>
+        <a href="#section-user-journeys">User Journeys</a>
+        <a href="#section-user-personas">User Personas</a>
+        <a href="#section-ideation">Ideation</a>
+        <a href="#section-user-flow">User Flow</a>
+        <a href="#section-prototype">Prototype</a>
+        <a href="#section-user-testing">User Testing</a>
+        <a href="#section-reflection">Reflection</a>
+      </nav>
       <!-- Text Section -->
       <section id="second-section">
         <!-- Project Info -->
@@ -81,7 +98,7 @@
         <!-- Project Text -->
         <div class="project-text">
           <!-- Problem -->
-          <div class="project-text-section">
+          <div id="section-problem" class="project-text-section">
             <div class="section-title">Problem</div>
             <div class="section-text">
               <p>
@@ -95,7 +112,7 @@
             </div>
           </div>
           <!-- Goals -->
-          <div class="project-text-section">
+          <div id="section-goals" class="project-text-section">
             <div class="section-title">Goals</div>
             <div class="section-text">
               <p>
@@ -107,7 +124,7 @@
             </div>
           </div>
           <!-- Solutions -->
-          <div class="project-text-section">
+          <div id="section-solutions" class="project-text-section">
             <div class="section-title">Solutions</div>
             <div class="section-images">
               <img
@@ -128,7 +145,7 @@
             </div>
           </div>
           <!-- Research -->
-          <div class="project-text-section">
+          <div id="section-research" class="project-text-section">
             <!-- Title -->
             <div class="section-title">Research</div>
             <!-- Text Section -->
@@ -154,7 +171,7 @@
             </div>
           </div>
           <!-- Interviews -->
-          <div class="project-text-section">
+          <div id="section-interviews" class="project-text-section">
             <!-- Title -->
             <div class="section-title">Interviews</div>
             <!-- Text Section -->
@@ -184,7 +201,7 @@
             </div>
           </div>
           <!-- Insights -->
-          <div class="project-text-section">
+          <div id="section-insights" class="project-text-section">
             <!-- Title -->
             <div class="section-title">Insights</div>
             <!-- Text Section -->
@@ -208,7 +225,7 @@
             </div>
           </div>
           <!-- Opportunities -->
-          <div class="project-text-section">
+          <div id="section-opportunities" class="project-text-section">
             <!-- Title -->
             <div class="section-title">Opportunities</div>
             <!-- Text Section -->
@@ -247,7 +264,7 @@
             </div>
           </div>
           <!-- User Journeys -->
-          <div class="project-text-section">
+          <div id="section-user-journeys" class="project-text-section">
             <!-- Title -->
             <div class="section-title">User Journeys</div>
             <!-- Image Section -->
@@ -260,7 +277,7 @@
             </div>
           </div>
           <!-- User Personas -->
-          <div class="project-text-section">
+          <div id="section-user-personas" class="project-text-section">
             <!-- Title -->
             <div class="section-title">User Personas</div>
             <!-- Text Section -->
@@ -281,7 +298,7 @@
             </div>
           </div>
           <!-- Ideation -->
-          <div class="project-text-section">
+          <div id="section-ideation" class="project-text-section">
             <!-- Title -->
             <div class="section-title">Ideation</div>
             <!-- Text Section -->
@@ -311,7 +328,7 @@
             </div>
           </div>
           <!-- User Flow -->
-          <div class="project-text-section">
+          <div id="section-user-flow" class="project-text-section">
             <!-- Title -->
             <div class="section-title">User Flow</div>
             <!-- Image Section -->
@@ -324,7 +341,7 @@
             </div>
           </div>
           <!-- Prototype -->
-          <div class="project-text-section">
+          <div id="section-prototype" class="project-text-section">
             <!-- Title -->
             <div class="section-title">Prototype</div>
             <!-- Image Section -->
@@ -337,7 +354,7 @@
             </div>
           </div>
           <!-- User Testing -->
-          <div class="project-text-section">
+          <div id="section-user-testing" class="project-text-section">
             <!-- Title -->
             <div class="section-title">User Testing</div>
             <!-- Text Section -->
@@ -356,7 +373,7 @@
             </div>
           </div>
           <!-- Reflection -->
-          <div class="project-text-section">
+          <div id="section-reflection" class="project-text-section">
             <!-- Title -->
             <div class="section-title">Reflection</div>
             <!-- Text Section -->
