--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- Second Section Wasteless -->
       <section id="second-section" class="project-section second-section">
         <!-- Project Container -->
-        <div class="item-section hidden-right">
+        <div class="item-section hidden-left">
           <div class="project-container">
             <!-- Image -->
             <div class="project-img">
@@ -316,12 +316,7 @@
     <footer class="footer">
       <div class="middle-section">
         <div class="contact-container">
-          <a class="footer-click" href="mailto:galina.gganeva@gmail.com"
-            >galina.gganeva@gmail.com</a
-          >
-          <a class="footer-click" href="tel:+359 898 710 566"
-            >+359 898 710 566</a
-          >
+          <a class="footer-text">2023</a>
         </div>
         <div class="credit-container">
           <p class="footer-text">Designed by me</p>
