--- a/project-spotify.html
+++ b/project-spotify.html
@@ -195,12 +195,7 @@
     <footer class="footer">
       <div class="middle-section">
         <div class="contact-container">
-          <a class="footer-click" href="mailto:galina.gganeva@gmail.com"
-            >galina.gganeva@gmail.com</a
-          >
-          <a class="footer-click" href="tel:+359 898 710 566"
-            >+359 898 710 566</a
-          >
+          <a class="footer-text">2023</a>
         </div>
         <div class="credit-container">
           <p class="footer-text">Designed by me</p>
