Adjusted padding and changed cv

--- a/project-wasteless.html
+++ b/project-wasteless.html
@@ -141,6 +141,7 @@
                 class="app-img"
                 src="/imgs/app-showcase2.gif"
                 alt="Application Showcase Gif"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
@@ -167,6 +168,7 @@
                 class="app-img"
                 src="/imgs/research-showcase1.png"
                 alt="Research Showcase"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
@@ -197,6 +199,7 @@
                 class="app-img"
                 src="/imgs/interview-showcase.png"
                 alt="Interview Showcase"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
@@ -273,6 +276,7 @@
                 class="app-img"
                 src="/imgs/user-journey-showcase.png"
                 alt="User Journeys Showcase"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
@@ -294,6 +298,7 @@
                 class="app-img"
                 src="/imgs/user-personas-showcase.png"
                 alt="User Personas Showcase"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
@@ -324,6 +329,7 @@
                 class="app-img"
                 src="/imgs/ideation-showcase.png"
                 alt="Ideation Showcase"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
@@ -337,6 +343,7 @@
                 class="app-img"
                 src="/imgs/user-flow-showcase.png"
                 alt="User Flow Showcase"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
@@ -350,6 +357,7 @@
                 class="app-img"
                 src="/imgs/prototype-showcase.png"
                 alt="Prototype Showcase"
+                style="padding-bottom: 2rem"
               />
             </div>
           </div>
