--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <!-- Arrows -->
-        <a href="#second-section" class="arrow-container hidden-right">
+        <a href="#second-section" class="arrow-container">
           <i class="arrow-down"></i>
           <i class="arrow-down"></i>
         </a>
