--- a/project-wasteless.html
+++ b/project-wasteless.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/project4.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/other-projects.css" />
     <script defer src="js/header-adjustment.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -399,6 +400,34 @@
               </p>
             </div>
           </div>
+        </div>
+      </section>
+      <!-- Other Projects Section -->
+      <section class="other-projects-section">
+        <!-- Text Part -->
+        <div class="section-title other-projects-text">
+          My Other Projects...
+        </div>
+        <!-- Images Part -->
+        <div class="other-projects-imgs-container">
+          <a href="project-casetify.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project1.png"
+              alt="First Project Picture"
+          /></a>
+          <a href="project-spotify.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project2.png"
+              alt="Second Project Picture"
+          /></a>
+          <a href="project-biscfit.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project3.png"
+              alt="Third Project Picture"
+          /></a>
         </div>
       </section>
     </main>
