--- a/project-biscfit.html
+++ b/project-biscfit.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/project3.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/other-projects.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -161,6 +162,34 @@
             src="imgs/project3-result3.png"
             alt="Final Result One"
           />
+        </div>
+      </section>
+      <!-- Other Projects Section -->
+      <section class="other-projects-section">
+        <!-- Text Part -->
+        <div class="section-title other-projects-text">
+          My Other Projects...
+        </div>
+        <!-- Images Part -->
+        <div class="other-projects-imgs-container">
+          <a href="project-wasteless.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project4.png"
+              alt="First Project Picture"
+          /></a>
+          <a href="project-spotify.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project2.png"
+              alt="Second Project Picture"
+          /></a>
+          <a href="project-casetify.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project1.png"
+              alt="Third Project Picture"
+          /></a>
         </div>
       </section>
     </main>
