--- a/project-casetify.html
+++ b/project-casetify.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/project1.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/other-projects.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -147,6 +148,34 @@
           <div class="preview-content">
             <img class="full" src="imgs/preview1.png" alt="Preview of Site" />
           </div>
+        </div>
+      </section>
+      <!-- Other Projects Section -->
+      <section class="other-projects-section">
+        <!-- Text Part -->
+        <div class="section-title other-projects-text">
+          My Other Projects...
+        </div>
+        <!-- Images Part -->
+        <div class="other-projects-imgs-container">
+          <a href="project-wasteless.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project4.png"
+              alt="First Project Picture"
+          /></a>
+          <a href="project-spotify.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project2.png"
+              alt="Second Project Picture"
+          /></a>
+          <a href="project-biscfit.html"
+            ><img
+              class="other-project-picture"
+              src="imgs/project3.png"
+              alt="Third Project Picture"
+          /></a>
         </div>
       </section>
     </main>
