--- a/project-wasteless.html
+++ b/project-wasteless.html
@@ -130,17 +130,17 @@
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/solutions-img-project1.png"
+                src="imgs/solutions-img-project1.png"
                 alt="Application Showcase"
               />
               <img
                 class="app-img"
-                src="/imgs/app-showcase1.gif"
+                src="imgs/app-showcase1.gif"
                 alt="Application Showcase Gif"
               />
               <img
                 class="app-img"
-                src="/imgs/app-showcase2.gif"
+                src="imgs/app-showcase2.gif"
                 alt="Application Showcase Gif"
                 style="padding-bottom: 2rem"
               />
@@ -167,7 +167,7 @@
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/research-showcase1.png"
+                src="imgs/research-showcase1.png"
                 alt="Research Showcase"
                 style="padding-bottom: 2rem"
               />
@@ -198,7 +198,7 @@
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/interview-showcase.png"
+                src="imgs/interview-showcase.png"
                 alt="Interview Showcase"
                 style="padding-bottom: 2rem"
               />
@@ -267,15 +267,15 @@
               </p>
             </div>
           </div>
-          <!-- User Journeys -->
+          <!-- User Journey -->
           <div id="section-user-journeys" class="project-text-section">
             <!-- Title -->
-            <div class="section-title">User Journeys</div>
+            <div class="section-title">User Journey</div>
             <!-- Image Section -->
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/user-journey-showcase.png"
+                src="imgs/user-journey-showcase.png"
                 alt="User Journeys Showcase"
                 style="padding-bottom: 2rem"
               />
@@ -297,7 +297,7 @@
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/user-personas-showcase.png"
+                src="imgs/user-personas-showcase.png"
                 alt="User Personas Showcase"
                 style="padding-bottom: 2rem"
               />
@@ -328,7 +328,7 @@
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/ideation-showcase.png"
+                src="imgs/ideation-showcase.png"
                 alt="Ideation Showcase"
                 style="padding-bottom: 2rem"
               />
@@ -342,7 +342,7 @@
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/user-flow-showcase.png"
+                src="imgs/user-flow-showcase.png"
                 alt="User Flow Showcase"
                 style="padding-bottom: 2rem"
               />
@@ -356,7 +356,7 @@
             <div class="section-images">
               <img
                 class="app-img"
-                src="/imgs/prototype-showcase.png"
+                src="imgs/prototype-showcase.png"
                 alt="Prototype Showcase"
                 style="padding-bottom: 2rem"
               />
